Revert "remove some name"
This reverts commit ade913c66bb1dd12bd4706b31727c3bb2803ad07.

--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Sh7ne Blog",
-  "short_name": "Sh7ne Blog",
-  "description": "Nothing.",
+  "name": "Hux Blog",
+  "short_name": "Hux Blog",
+  "description": "About an engineer & designer who loves web.",
   "icons": [{
     "src": "icons/128.png",
     "sizes": "128x128",
