--- a/img/manifest.json
+++ b/img/manifest.json
@@ -2,12 +2,12 @@
 	"name": "Sh7ne.com",
 	"icons": [
 		{
-			"src": "\/img\/android-chrome-192x192.png",
+			"src": "\/img\/favicon\/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\/img\/android-chrome-512x512.png",
+			"src": "\/img\/favicon\/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
